# dian-cli

./: .gitignore  CHANGELOG.md  CMakeLists.txt  build.bat  main.cpp  readme.md  todo.md  vcpkg.json
doc/: 项目结构.md
res/: config_ime.json
src/: CMakeLists.txt
src/dianswitch/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  main.cpp
src/ime-dian-d/: CMakeLists.txt  main.cpp
src/win-dian-cli/: CMakeLists.txt
src/win-dian-d/: CMakeLists.txt  main.cpp
src/zenhan/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/test_3rd_func/: CMakeLists.txt  test_main.cpp
